advance js start

--- a/Js Practice/index.html
+++ b/Js Practice/index.html
@@ -15,8 +15,11 @@
 
 <!-- script add  -->
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script src="Es6.js"></script>
+<script src="jsModules.js"></script>    
+<script src="Es6.js"></script>
+<script src="jsAdvance.js"></script>
     <script src="functionsES6.js"></script>
+    <script src="arrayMethod.js"></script>
     <script src="context.js"></script>
     <script src="spreadOperator.js"></script>
     <script src="restParameter.js"></script>
